; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_write_video_header.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_write_video_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flv_output = type { i32* }
%struct.encoder_packet = type { i32, i32, i32, i32, i32 }

@OBS_ENCODER_VIDEO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.flv_output*)* @write_video_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_video_header(%struct.flv_output* %0) #0 {
  %2 = alloca %struct.flv_output*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.encoder_packet, align 4
  store %struct.flv_output* %0, %struct.flv_output** %2, align 8
  %8 = load %struct.flv_output*, %struct.flv_output** %2, align 8
  %9 = getelementptr inbounds %struct.flv_output, %struct.flv_output* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %3, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @obs_output_get_video_encoder(i32* %11)
  store i32* %12, i32** %4, align 8
  %13 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 0
  store i32 1, i32* %13, align 4
  %14 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 1
  store i32 1, i32* %14, align 4
  %15 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 2
  store i32 0, i32* %15, align 4
  %16 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 3
  store i32 0, i32* %16, align 4
  %17 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 4
  %18 = load i32, i32* @OBS_ENCODER_VIDEO, align 4
  store i32 %18, i32* %17, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @obs_encoder_get_extra_data(i32* %19, i32** %5, i64* %6)
  %21 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 2
  %22 = load i32*, i32** %5, align 8
  %23 = load i64, i64* %6, align 8
  %24 = call i32 @obs_parse_avc_header(i32* %21, i32* %22, i64 %23)
  %25 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 3
  store i32 %24, i32* %25, align 4
  %26 = load %struct.flv_output*, %struct.flv_output** %2, align 8
  %27 = call i32 @write_packet(%struct.flv_output* %26, %struct.encoder_packet* %7, i32 1)
  %28 = getelementptr inbounds %struct.encoder_packet, %struct.encoder_packet* %7, i32 0, i32 2
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @bfree(i32 %29)
  ret void
}

declare dso_local i32* @obs_output_get_video_encoder(i32*) #1

declare dso_local i32 @obs_encoder_get_extra_data(i32*, i32**, i64*) #1

declare dso_local i32 @obs_parse_avc_header(i32*, i32*, i64) #1

declare dso_local i32 @write_packet(%struct.flv_output*, %struct.encoder_packet*, i32) #1

declare dso_local i32 @bfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
